tests/ui/array_len_suffix.stderr
error: the constant `12` is not of type `usize`
 --> tests/ui/array_len_suffix.rs:4:23
  |
4 |         fn array() -> [String; 12u16];
  |                       ^^^^^^^^^^^^^^^ expected `usize`, found `u16`
  |
  = note: the length of array `[String; 12]` must be type `usize`

error: the constant `12` is not of type `usize`
 --> tests/ui/array_len_suffix.rs:1:1
  |
1 | #[cxx::bridge]
  | ^^^^^^^^^^^^^^ expected `usize`, found `u16`
  |
  = note: the length of array `[String; 12]` must be type `usize`
  = note: this error originates in the attribute macro `cxx::bridge` (in Nightly builds, run with -Z macro-backtrace for more info)

error: the constant `12` is not of type `usize`
 --> tests/ui/array_len_suffix.rs:4:38
  |
4 |         fn array() -> [String; 12u16];
  |                                      ^ expected `usize`, found `u16`
  |
  = note: the length of array `[String; 12]` must be type `usize`

error[E0308]: mismatched types
 --> tests/ui/array_len_suffix.rs:4:32
  |
4 |         fn array() -> [String; 12u16];
  |                                ^^^^^ expected `usize`, found `u16`
  |
help: change the type of the numeric literal from `u16` to `usize`
  |
4 -         fn array() -> [String; 12u16];
4 +         fn array() -> [String; 12usize];
  |
